update doc tracking

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,21 @@
 name: vietmap_tracking_plugin
-description: "A new Flutter plugin project."
-version: 0.0.1
-homepage:
+description: A comprehensive Flutter plugin for GPS tracking and location data transmission to Vietmap's tracking API with background service support.
+version: 1.0.0
+homepage: https://github.com/vietmap-company/vietmap_tracking_plugin
+repository: https://github.com/vietmap-company/vietmap_tracking_plugin
+issue_tracker: https://github.com/vietmap-company/vietmap_tracking_plugin/issues
+
+topics:
+  - gps
+  - tracking
+  - location
+  - background-service
+  - vietmap
+  - geolocation
+
+platforms:
+  android:
+  ios:
 
 environment:
   sdk: ^3.8.0
