--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: vietmap_tracking_plugin
 description: A comprehensive Flutter plugin for GPS tracking and location data transmission to Vietmap's tracking API with background service support.
-version: 1.0.0
+version: 1.0.0-alpha.1
 homepage: https://github.com/vietmap-company/vietmap_tracking_plugin
 repository: https://github.com/vietmap-company/vietmap_tracking_plugin
 issue_tracker: https://github.com/vietmap-company/vietmap_tracking_plugin/issues
@@ -8,7 +8,6 @@ issue_tracker: https://github.com/vietmap-company/vietmap_tracking_plugin/issues
 topics:
   - gps
   - tracking
-  - location
   - background-service
   - vietmap
   - geolocation
